Добавлено отображение о том, что пользователь печатает сообщение

--- a/template/pom.xml
+++ b/template/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>template</artifactId>
-
+    <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
